@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2017-12-19] RFC4880: fixes missing interpretation of subpacket length encoding
 * [2017-12-17] RFC4880: fixes missing hash truncation in AsymmetricVerifyDSA()
 * [2017-12-08] release 1.3.8 of LibTMCG
 * [2017-12-06] RFC4880: improved error handling for unsupported public-key algos
